<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center"
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:src="@drawable/beetroot" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/beetroot" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/palak_1"
                            android:layout_margin="1dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/spinach" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/two"
                    android:layout_below="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:src="@drawable/fruits" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/citrusFruits" />
                    </LinearLayout>


                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/banana"
                            android:layout_margin="1dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/banana" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:src="@drawable/dryfruits" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/dryFruits" />
                    </LinearLayout>


                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/til"
                            android:layout_margin="1dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/SesameSeeds" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:src="@drawable/tomato" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/tomato" />
                    </LinearLayout>


                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/louki"
                            android:layout_margin="1dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textStyle="bold"
                            android:layout_marginBottom="2dp"
                            android:text="@string/bottlegourd" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

<!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/beetroot"
                    android:layout_margin="1dp"
                     />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/beetroot" />


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/palak_1"
                    android:layout_margin="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/spinach" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fruits"
                    android:layout_margin="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/citrusFruits" />


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/banana"
                    android:layout_margin="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/banana" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/dryfruits"
                    android:layout_margin="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/beetroot" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/til"
                    android:layout_margin="1dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:text="@string/beetroot" />

            </LinearLayout>
-->

        </androidx.cardview.widget.CardView>
    </ScrollView>

</RelativeLayout>